<resources>
    <string name="app_name">M.Lesson2</string>
    <string name="back">BACK</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="your_name">Your name:</string>
    <string name="your_surname">Your surname:</string>
    <string name="private_information">Private information</string>
    <string name="your_email">Your Email:</string>
    <string name="your_number_of_phone">Your number of phone:</string>
    <string name="your_password">Your password:</string>
    <string name="hello_there_nwelcome_back">HELLO THERE, \nWELCOME BACK</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_username">Your username</string>
    <string name="your_password_first_activity">Your password</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="password_error_text">Пароль должен быть больше 6 символов !</string>
    <string name="username_error_text">Заполните пустое пространство !</string>

</resources>