<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/photo_of_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/circle_accaunt_svg"/>

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/purple_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_photo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_of_user" />

    <EditText
        android:id="@+id/name"
        style="@style/marginHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/surname"
        style="@style/marginHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_surname"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/privateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/marginHorizontal"
        android:text="@string/private_information"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        android:textColor="@color/gray" />

    <EditText
        android:drawableStart="@drawable/email_art"
        android:id="@+id/email"
        android:drawablePadding="@dimen/marginMinus2x"
        style="@style/marginHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        app:layout_constraintTop_toBottomOf="@id/privateInfo" />

    <EditText
        android:drawablePadding="@dimen/marginMinus2x"
        android:drawableStart="@drawable/phone_art"
        android:id="@+id/number_of_phone"
        style="@style/marginHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_number_of_phone"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:drawablePadding="@dimen/marginMinus2x"
        android:drawableStart="@drawable/lock_art"
        android:id="@+id/password"
        style="@style/marginHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        app:layout_constraintTop_toBottomOf="@id/number_of_phone" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="@dimen/margin"
        android:padding="@dimen/margin"
        android:text="@string/back"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>